--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               2024/01
             </td>
             <td valign="center">
-              I have passed the Ph.D. oral defense and become a Dr.! &#127881; 
+              I have passed the Ph.D. oral defence and become a Dr.! &#127881; 
             </td>
           </tr>
         </table>
