--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ Acoustics, Speech and Signal Processing (ICASSP), 2021</i>
                   style="color: #777; font-size: 14px;">Limin Yang</a>, <a
                   href="https://www.zhangxueyao.com/" style="color: #777; font-size: 14px;">Xueyao
                   Zhang</a>, and <a
-                  href="https://www.zhangxueyao.com/" style="color: #777; font-size: 14px;">Lanqing
+                  href="https://guolanqing.github.io" style="color: #777; font-size: 14px;">Lanqing
                   Guo</a>.<br>
                 Last updated:
                 <script>
