--- a/index.html
+++ b/index.html
@@ -218,6 +218,22 @@
             <col span="1" style="width: 12%;">
             <col span="1" style="width: 88%;">
           </colgroup>
+                   <tr>
+            <td valign="center">
+              2024/07
+            </td>
+            <td valign="center">
+              Two papers got accepted for ECCV2024. Congratulations to all collaborators!
+            </td>
+          </tr>
+                       <tr>
+            <td valign="center">
+              2024/04
+            </td>
+            <td valign="center">
+              I got the Best Thesis Award in NTU EEE 2024! Thanks~ &#129395;
+            </td>
+          </tr>
           <tr>
             <td valign="center">
               2024/03
