--- a/index.html
+++ b/index.html
@@ -264,18 +264,32 @@
         <table width="100%" align="center" border="0" cellpadding="12" style="table-layout:fixed;">
           <tr>
             <td valign="center">
-              <span class="tag">Preprint</span>&nbsp;&nbsp;
+              <span class="tag">ECCV 2024</span>&nbsp;&nbsp;
               <papertitle>Make a Cheap Scaling: A Self-Cascade Diffusion Model for Higher-Resolution Adaptation</papertitle>
               <br>
-              <span class="underline"><b>Lanqing Guo</b></span>*, Yingqing He*, Haoxin Chen, Menghan Xia, Xiaodong Cun, Yufei Wang, Siyu Huang, Yong Zhang, Xintao Wang, Qifeng Chen, Ying Shan, Bihan Wen (* equal contribution)
+              <span class="underline"><b>Lanqing Guo</b></span>*, Yingqing He*, Haoxin Chen, Menghan Xia, Xiaodong Cun, Yufei Wang, Siyu Huang, Yong Zhang, Xintao Wang, Qifeng Chen, Ying Shan, Bihan Wen
               <br>
-              <i>Arxiv 2024</i>
+              <i>European Conference on Computer Vision (ECCV), 2024</i>
               &nbsp
 <!--              <br>-->
               <a href="https://arxiv.org/pdf/2402.10491.pdf" target="_blank">PDF</a> /
               <a href="https://github.com/GuoLanqing/Self-Cascade" target="_blank">Code</a> /
               <a href="https://guolanqing.github.io/Self-Cascade/" target="_blank">Project Page</a>
               <br>
+            </td>
+          </tr>
+                 <tr>
+            <td valign="center">
+              <span class="tag">ECCV 2024</span>&nbsp;&nbsp;
+              <papertitle>Temporal As a Plugin: Unsupervised Video Denoising with Pre-Trained Image Denoisers</papertitle>
+              <br>
+              Zixuan Fu*, <span class="underline"><b>Lanqing Guo</b></span>*, Chong Wang, Yufei Wang, Zhihao Li, Bihan Wen
+              <br>
+              <i>European Conference on Computer Vision (ECCV), 2024</i>
+              &nbsp
+<!--              <br>-->
+              <a href="" target="_blank">PDF</a> /
+              <a href="https://github.com/zfu006/TAP" target="_blank">Code</a>               <br>
             </td>
           </tr>
           <tr>
