--- a/index.html
+++ b/index.html
@@ -272,9 +272,8 @@
               <i>Arxiv, 2024</i>
               &nbsp
 <!--              <br>-->
-              <a href="https://arxiv.org/pdf/2402.10491.pdf" target="_blank">PDF</a> /
-              <a href="https://github.com/GuoLanqing/Self-Cascade" target="_blank">Code</a> /
-              <a href="https://guolanqing.github.io/Self-Cascade/" target="_blank">Project Page</a>
+              <a href="https://arxiv.org/abs/2407.08865" target="_blank">PDF</a> /
+              <a href="https://github.com/GuoLanqing/Awesome-Shadow-Removal" target="_blank">Code</a> 
               <br>
             </td>
           </tr>
