--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
                 <name>Lanqing Guo (过岚清)</name>
               </p>
               <p>
-                Ph.D. student, <br>
-                <a href="https://www.ntu.edu.sg/" target="_blank">Nanyang Technological University, Singapore</a>
+                Postdoctoral Fellow, <br>
+                <a href="https://www.utexas.edu" target="_blank">The University of Texas at Austin, US</a>
               </p>
               <p align=left>
-                E-mail: <span>lanqing001 [AT] e.ntu.edu.sg</span>
+                E-mail: <span>lanqing.guo [AT] austin.utexas.edu</span>
               </p>
               <p align=left>
-                <a href="resume/resume_EN.pdf" target="_blank">Curriculum Vitae</a>
-                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+                <!-- <a href="resume/resume_EN.pdf" target="_blank">Curriculum Vitae</a>
+                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp; -->
                 <a href="https://scholar.google.com/citations?user=8rkIFHcAAAAJ&hl=zh-CN" target="_blank">Google
                   Scholar</a> &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
                 <a href="https://dblp.org/pid/229/8223.html" target="_blank">DBLP</a>
@@ -192,12 +192,12 @@
           <tr>
             <td valign="center">
               <p>
-                I'm a final-year Ph.D. student at Nanyang Technological University (NTU), Singapore, supervised by
-                Professor <a href="https://personal.ntu.edu.sg/bihan.wen/" target="_blank">Bihan Wen</a>.
-                My research interest is to study image/video restoration and enhancement, image generation, machine learning and optimization.
+                I'm a Postdoctoral Fellow in <a href="https://vita-group.github.io/index.html" target="_blank">VITA group</a> at <a href="https://www.utexas.edu" target="_blank">The University of Texas at Austin (UT Austin)</a>, supervised by
+                Prof. <a href="https://scholar.google.com/citations?user=pxFyKAIAAAAJ&hl=zh-CN" target="_blank">Zhangyang (Atlas) Wang</a>.
+                My research goal is to enable machine to create high-quality vision and multi-modality data.
               </p>
               <p>
-                Prior to that, I received my B.Eng degree (2015-2019) in Software Engineering from
+                Previously, I obtained my Ph.D degre (winner of the Best Thesis Award) from <a href="https://www.ntu.edu.sg" target="_blank">Nanyang Technological University (NTU)</a>, supervised by Prof. <a href="https://personal.ntu.edu.sg/bihan.wen/" target="_blank">Bihan Wen</a>. I received my B.Eng degree (2015-2019) in Software Engineering from
                                 <a href="https://en.wikipedia.org/wiki/Wuhan_University" target="_blank">Wuhan University</a>.
               </p>
             </td>
@@ -275,6 +275,20 @@
               <a href="https://arxiv.org/abs/2407.08865" target="_blank">PDF</a> /
               <a href="https://github.com/GuoLanqing/Awesome-Shadow-Removal" target="_blank">Code</a> 
               <br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="center">
+              <span class="tag">NeurIPS 2024</span>&nbsp;&nbsp;
+              <papertitle>ContextGS: Compact 3D Gaussian Splatting with Anchor Level Context Mode</papertitle>
+              <br>
+              Yufei Wang, Zhihao Li, <span class="underline"><b>Lanqing Guo</b></span>, Wenhan Yang, Alex C. Kot, Bihan Wen
+              <br>
+              <i>The Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), 2024</i>
+              &nbsp
+<!--              <br>-->
+              <a href="https://arxiv.org/pdf/2405.20721" target="_blank">PDF</a> /
+              <a href="https://github.com/wyf0912/ContextGS" target="_blank">Code</a>               <br>
             </td>
           </tr>
           <tr>
