--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <br>
               <span class="underline"><b>Lanqing Guo</b></span>, Chong Wang, Yufei Wang, Siyu Huang, Wenhan Yang, Alex C. Kot, Bihan Wen
               <br>
-              <i>Arxiv, 2024</i>
+              <i>Arxiv, 2024 (Under review in International Journal of Computer Vision (IJCV)).</i>
               &nbsp
 <!--              <br>-->
               <a href="https://arxiv.org/abs/2407.08865" target="_blank">PDF</a> /
