--- a/index.html
+++ b/index.html
@@ -269,11 +269,41 @@
               <br>
               <span class="underline"><b>Lanqing Guo</b></span>, Chong Wang, Yufei Wang, Siyu Huang, Wenhan Yang, Alex C. Kot, Bihan Wen
               <br>
-              <i>Arxiv, 2024 (Under review in International Journal of Computer Vision (IJCV)).</i>
+              <i>Arxiv, 2024</i>
               &nbsp
 <!--              <br>-->
               <a href="https://arxiv.org/abs/2407.08865" target="_blank">PDF</a> /
               <a href="https://github.com/GuoLanqing/Awesome-Shadow-Removal" target="_blank">Code</a> 
+              <br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="center">
+              <span class="tag">Preprint</span>&nbsp;&nbsp;
+              <papertitle>HiPrompt: Tuning-free Higher-Resolution Generation with Hierarchical MLLM Prompts</papertitle>
+              <br>
+              Xinyu Liu, Yingqing He, <span class="underline"><b>Lanqing Guo</b></span>, Xiang Li, Bu Jin, Peng Li, Yan Li, Chi-Min Chan, Qifeng Chen, Wei Xue, Wenhan Luo, Qingfeng Liu, Yike Guo
+              <br>
+              <i>Arxiv, 2024</i>
+              &nbsp
+<!--              <br>-->
+              <a href="https://arxiv.org/pdf/2409.02919" target="_blank">PDF</a> /
+              <a href="https://liuxinyv.github.io/HiPrompt/" target="_blank">Project Page</a> 
+              <br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="center">
+              <span class="tag">Preprint</span>&nbsp;&nbsp;
+              <papertitle>SoftShadow: Leveraging Penumbra-Aware Soft Masks for Shadow Removal</papertitle>
+              <br>
+              Xinrui Wang*, <span class="underline"><b>Lanqing Guo</b></span>*, Xiyu Wang, Siyu Huang, Bihan Wen
+                            <br>
+              <i>Arxiv, 2024</i>
+              &nbsp
+<!--              <br>-->
+              <a href="https://arxiv.org/pdf/2409.07041" target="_blank">PDF</a> /
+              <a href="https://github.com/Xinrui014/SoftShadow/" target="_blank">Code</a> 
               <br>
             </td>
           </tr>
