--- a/index.html
+++ b/index.html
@@ -262,6 +262,21 @@
           </tr>
         </table>
         <table width="100%" align="center" border="0" cellpadding="12" style="table-layout:fixed;">
+                        <tr>
+            <td valign="center">
+              <span class="tag">Preprint</span>&nbsp;&nbsp;
+              <papertitle>Oscillation Inversion: Understand the structure of Large Flow Model through the Lens of Inversion Method</papertitle>
+              <br>
+              Yan Zheng, Zhenxiao Liang, Xiaoyan Cong, <span class="underline"><b>Lanqing Guo</b></span>, Yuehao Wang, Peihao Wang, Zhangyang Wang
+              <br>
+              <i>Arxiv, 2024</i>
+              &nbsp
+<!--              <br>-->
+              <a href=“https://arxiv.org/pdf/2411.11135" target="_blank">PDF</a> /
+              <a href="https://yanyanzheng96.github.io/oscillation_inversion/" target="_blank">Project Page</a> 
+              <br>
+            </td>
+          </tr>
               <tr>
             <td valign="center">
               <span class="tag">Preprint</span>&nbsp;&nbsp;
