--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
             <col span="1" style="width: 12%;">
             <col span="1" style="width: 88%;">
           </colgroup>
+                      <tr>
+            <td valign="center">
+              2024/12
+            </td>
+            <td valign="center">
+              Co-organize the <a href="https://sites.google.com/view/elvm/home?authuser=0" target="_blank">2nd Workshop on Efficient Large Vision Models, to CVPR 2025 Workshop</a>  
+            </td>
+          </tr>
                    <tr>
             <td valign="center">
               2024/07
