--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               2024/12
             </td>
             <td valign="center">
-              Co-organize the <a href="https://sites.google.com/view/elvm/home?authuser=0" target="_blank">2nd Workshop on Efficient Large Vision Models, to CVPR 2025 Workshop</a>  
+              Co-organize the <a href="https://sites.google.com/view/elvm/home" target="_blank">2nd Workshop on Efficient Large Vision Models, to CVPR 2025 Workshop</a>  
             </td>
           </tr>
                    <tr>
