--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
             <col span="1" style="width: 12%;">
             <col span="1" style="width: 88%;">
           </colgroup>
+           <tr>
+            <td valign="center">
+              2025/02
+            </td>
+            <td valign="center">
+               Two papers got accepted for CVPR2025 Congratulations to all collaborators!
+            </td>
+          </tr>
                       <tr>
             <td valign="center">
               2024/12
@@ -317,7 +325,7 @@
           </tr>
           <tr>
             <td valign="center">
-              <span class="tag">Preprint</span>&nbsp;&nbsp;
+              <span class="tag">CVPR 2025</span>&nbsp;&nbsp;
               <papertitle>SoftShadow: Leveraging Penumbra-Aware Soft Masks for Shadow Removal</papertitle>
               <br>
               Xinrui Wang*, <span class="underline"><b>Lanqing Guo</b></span>*, Xiyu Wang, Siyu Huang, Bihan Wen
