--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
             <col span="1" style="width: 12%;">
             <col span="1" style="width: 88%;">
           </colgroup>
+              <tr>
+            <td valign="center">
+              2025/06
+            </td>
+            <td valign="center">
+               One paper got accepted for ICCV2025 Congratulations to all collaborators!
+            </td>
+          </tr>
            <tr>
             <td valign="center">
               2025/02
@@ -278,6 +286,21 @@
           </tr>
         </table>
         <table width="100%" align="center" border="0" cellpadding="12" style="table-layout:fixed;">
+                                  <tr>
+            <td valign="center">
+              <span class="tag">ICCV2025</span>&nbsp;&nbsp;
+              <papertitle>Training-Free Text-Guided Image Editing with Visual Autoregressive Model</papertitle>
+              <br>
+              Yufei Wang, <span class="underline"><b>Lanqing Guo</b></span>*, Zhihao Li, Jiaxing Huang, Pichao Wang, Bihan Wen, Jian Wang
+              <br>
+               <i>IEEE, International Conference on Computer Vision (ICCV), 2025</i>
+              &nbsp
+<!--              <br>-->
+              <a href=“https://arxiv.org/pdf/2503.23897" target="_blank">PDF</a> /
+              <a href="https://github.com/wyf0912/AREdit" target="_blank">Code</a> 
+              <br>
+            </td>
+          </tr>
                         <tr>
             <td valign="center">
               <span class="tag">Preprint</span>&nbsp;&nbsp;
@@ -615,8 +638,18 @@ Acoustics, Speech and Signal Processing (ICASSP), 2021</i>
                     <td class="work-column">
                         <img src="images/logo-tencentailab.png" width=35>
                     </td>
+                     
                     <td>
                         <p class="font" style="font-size: 16px">2023.10&mdash;2024.04: <a target="_blank" href="https://ai.tencent.com/ailab/zh/index">AI Lab, Tencent</a> Research Intern, supervised by Dr <a target="_blank" href="https://yzhang2016.github.io/">Yong Zhang</a></p>
+                    </td>
+                </tr>
+                   <tr>
+                    <td class="work-column">
+                        <img src="images/logo-alibaba.png" width=35>
+                    </td>
+                     
+                    <td>
+                        <p class="font" style="font-size: 16px">2023.10&mdash;2024.04: <a target="_blank" href="https://damo.alibaba.com/about?language=en">DAMO Academy, Alibaba</a> Research Intern, supervised by Prof <a target="_blank" href="https://scholar.google.com/citations?user=J4MQfaIAAAAJ&hl=zh-CN">Zhenxing Niu</a></p>
                     </td>
                 </tr>
                               <tr>
