--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
         <table width="100%" align="center" border="0" cellpadding="12" style="table-layout:fixed;">
                                   <tr>
             <td valign="center">
-              <span class="tag">ICCV2025</span>&nbsp;&nbsp;
+              <span class="tag">ICCV 2025</span>&nbsp;&nbsp;
               <papertitle>Training-Free Text-Guided Image Editing with Visual Autoregressive Model</papertitle>
               <br>
-              Yufei Wang, <span class="underline"><b>Lanqing Guo</b></span>*, Zhihao Li, Jiaxing Huang, Pichao Wang, Bihan Wen, Jian Wang
+              Yufei Wang, <span class="underline"><b>Lanqing Guo</b></span>#, Zhihao Li, Jiaxing Huang, Pichao Wang, Bihan Wen, Jian Wang
               <br>
                <i>IEEE, International Conference on Computer Vision (ICCV), 2025</i>
               &nbsp
@@ -303,12 +303,12 @@
           </tr>
                         <tr>
             <td valign="center">
-              <span class="tag">Preprint</span>&nbsp;&nbsp;
-              <papertitle>Oscillation Inversion: Understand the structure of Large Flow Model through the Lens of Inversion Method</papertitle>
+              <span class="tag">AAAI 2026</span>&nbsp;&nbsp;
+              <papertitle>Oscillation Inversion: Training-free Image and Video Enhancement through Oscillated Latents in Large Flow Models</papertitle>
               <br>
-              Yan Zheng, Zhenxiao Liang, Xiaoyan Cong, <span class="underline"><b>Lanqing Guo</b></span>, Yuehao Wang, Peihao Wang, Zhangyang Wang
+              Yan Zheng, Zhenxiao Liang, Xiaoyan Cong, Yi Yang, <span class="underline"><b>Lanqing Guo</b></span>, Yuehao Wang, Peihao Wang, Zhangyang Wang
               <br>
-              <i>Arxiv, 2024</i>
+               <i>The Association for the Advancement of Artificial Intelligence (AAAI), 2025</i> <b style="color:red">(Oral)</b>
               &nbsp
 <!--              <br>-->
               <a href=“https://arxiv.org/pdf/2411.11135" target="_blank">PDF</a> /
@@ -349,11 +349,27 @@
           <tr>
             <td valign="center">
               <span class="tag">CVPR 2025</span>&nbsp;&nbsp;
+              <papertitle>Reconciling Stochastic and Deterministic Strategies for Zero-shot Image Restoration using Diffusion Model in Dual</papertitle>
+              <br>
+              Chong Wang, <span class="underline"><b>Lanqing Guo</b></span>, Zixuan Fu, Siyuan Yang, Hao Cheng, Alex Kot, Bihan Wen
+                            <br>
+              <i>
+Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR), 2025</i>
+              &nbsp
+<!--              <br>-->
+              <a href="https://arxiv.org/pdf/2409.07041" target="_blank">PDF</a> /
+              <a href="https://github.com/Xinrui014/SoftShadow/" target="_blank">Code</a> 
+              <br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="center">
+              <span class="tag">CVPR 2025</span>&nbsp;&nbsp;
               <papertitle>SoftShadow: Leveraging Penumbra-Aware Soft Masks for Shadow Removal</papertitle>
               <br>
               Xinrui Wang*, <span class="underline"><b>Lanqing Guo</b></span>*, Xiyu Wang, Siyu Huang, Bihan Wen
                             <br>
-              <i>Arxiv, 2024</i>
+              <i>Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR), 2025</i>
               &nbsp
 <!--              <br>-->
               <a href="https://arxiv.org/pdf/2409.07041" target="_blank">PDF</a> /
