--- a/index.html
+++ b/index.html
@@ -316,6 +316,21 @@
               <br>
             </td>
           </tr>
+                             <tr>
+            <td valign="center">
+              <span class="tag">WACV 2026</span>&nbsp;&nbsp;
+              <papertitle>	FlowMorph: Revealing an Optimizable Flow Latent Space for Controlled Image Morphing</papertitle>
+              <br>
+              Yan Zheng, Yi Yang, <span class="underline"><b>Lanqing Guo</b></span>, Zhangyang Wang
+              <br>
+               <i>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2025</i>
+              &nbsp
+<!--              <br>-->
+              <a href=“https://arxiv.org/pdf/2411.11135" target="_blank">PDF</a> /
+              <a href="https://yanyanzheng96.github.io/oscillation_inversion/" target="_blank">Project Page</a> 
+              <br>
+            </td>
+          </tr>
               <tr>
             <td valign="center">
               <span class="tag">Preprint</span>&nbsp;&nbsp;
