--- a/index.html
+++ b/index.html
@@ -218,12 +218,20 @@
             <col span="1" style="width: 12%;">
             <col span="1" style="width: 88%;">
           </colgroup>
+                 <tr>
+            <td valign="center">
+              2025/11
+            </td>
+            <td valign="center">
+               I serve as Area Chair for ICASSP 2026. Thanks for invitation!
+            </td>
+          </tr>
               <tr>
             <td valign="center">
               2025/06
             </td>
             <td valign="center">
-               One paper got accepted for ICCV2025 Congratulations to all collaborators!
+               One paper got accepted for ICCV2025. Congratulations to all collaborators!
             </td>
           </tr>
            <tr>
@@ -231,7 +239,7 @@
               2025/02
             </td>
             <td valign="center">
-               Two papers got accepted for CVPR2025 Congratulations to all collaborators!
+               Two papers got accepted for CVPR2025. Congratulations to all collaborators!
             </td>
           </tr>
                       <tr>
