--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a href="https://www.utexas.edu" target="_blank">The University of Texas at Austin, US</a>
               </p>
               <p align=left>
-                E-mail: <span>lanqing.guo [AT] austin.utexas.edu</span>
+                E-mail: <span>lanqing001 [AT] e.ntu.edu.sg</span>
               </p>
               <p align=left>
                 <!-- <a href="resume/resume_EN.pdf" target="_blank">Curriculum Vitae</a>
